--- a/code/credentials.ini
+++ b/code/credentials.ini
@@ -4,3 +4,4 @@ AWS_ACCESS_SECRET_KEY = o2henMil6VH05YEONVSYWspukjoeUwqwG1aRhC0L
 BUCKET = ayp-data
 [LOCAL_PATHS]
 PROJECT_ROOT = /Users/roygranit/Desktop/ydata/industry_project/repo/academix-ydata-project/
+DATA_PATH = /Users/roygranit/Desktop/ydata/industry_project/repo/academix-ydata-project/
