--- a/code/credentials.ini
+++ b/code/credentials.ini
@@ -3,6 +3,6 @@ AWS_ACCESS_KEY = AKIAIA55FCCZKLRCFQKQ
 AWS_ACCESS_SECRET_KEY = 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
 BUCKET = ayp-data
 [LOCAL_PATHS]
-PROJECT_ROOT = /Users/roygranit/Desktop/ydata/industry_project/repo/academix-ydata-project/
-DATA_PATH = /Users/roygranit/Desktop/ydata/industry_project/repo/academix-ydata-project/
+PROJECT_ROOT = /content/AYP/
+DATA_PATH = data/
 
